--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ social:
   - title: bitbucket 
     url: http://bitbucket.org/jekyll
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/dicunningham
 
 # Postal address (add as many lines as necessary)
 address:
